--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,5 +1,6 @@
 unstable_features = true
-edition = 2021
+edition = "2021"
+version = "Two"
 
 binop_separator = "Back"
 
@@ -8,6 +9,7 @@ brace_style = "AlwaysNextLine"
 condense_wildcard_suffixes = true
 
 enum_discrim_align_threshold = 20
+struct_field_align_threshold = 20
 
 fn_single_line = true
 
@@ -26,3 +28,13 @@ imports_granularity = "Crate"
 overflow_delimited_expr = true
 
 group_imports = "StdExternalCrate"
+
+trailing_comma = "Never"
+
+use_field_init_shorthand = true
+
+use_try_shorthand = true
+
+where_single_line = true
+
+wrap_comments = true
