--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ debug = 2
 
 [profile.release]
 panic = "abort"
-opt-level = "z"
+opt-level = 0
 #strip = "symbols"
 debug = 2
 #split-debuginfo = "packed"
